# HyINDEL

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Cluster.cpp  LICENSE.md  Makefile  README.md  indel
scripts/: Assembly.sh  CMakeLists.txt  HyINDEL.sh  Post.sh  Pre.sh  README.md  assembleInsertions.sh  dgv.bed  dgv.txt  excludeRegions.sh  filter.json  filter_discordant.json  filter_softclip.json  filter_unmapped.json  gs-check-overlap.py  gs-process-svclassify.py  gs-statistics.py  gs-svclassify.txt  helperSimulations.py  plusminus.sh  pm-assembleInsertions.sh  pm-postProcess.sh  pm-preProcess.sh  postProcess.sh  preProcess.sh  print-statistics.py  process-dgv.py  process-svclassify.py  real.sh  removeRegions.sh  results-dgv.py  results.py  sim-rules.txt  simulations.sh
scripts/GS/: gs-process-dgv.py  gs-statistics.py  gs-svclassify.txt
scripts/postprocess/: filter_coverage.awk  filter_support_large.awk  filter_support_small.awk  filter_support_split.awk  results.py  run_filter.sh
scripts/simulations/: generate.sh  half.py  range.py  sim-events.txt  sim-process.py
source/: AlignInsertions.cpp  ArgsParser.cpp  ArgsParser.hpp  CMakeLists.txt  Cluster.cpp  Detect.cpp  Detect.hpp  InputReader.cpp  InputReader.hpp  Ins.cpp  Insertions.cpp  Main.cpp  Misc.hpp  OutputWriter.cpp  OutputWriter.hpp  Parser.cpp  Parser.hpp  VariantDetect.cpp  VariantDetect.hpp  Writer.cpp  Writer.hpp
test/: ArgsParser.cpp  CMakeLists.txt  Parser.cpp  expected-output.vcf  input.bam.bai  ref.fa
