install( PROGRAMS ${CMAKE_SOURCE_DIR}/scripts/HyINDEL.sh
    DESTINATION "${CMAKE_INSTALL_BINDIR}" 
    RENAME HyINDEL
    )

install( PROGRAMS ${CMAKE_SOURCE_DIR}/scripts/Pre.sh
    DESTINATION "${CMAKE_INSTALL_BINDIR}" 
    RENAME HyINDEL_pre
    )

install( PROGRAMS ${CMAKE_SOURCE_DIR}/scripts/Post.sh
    DESTINATION "${CMAKE_INSTALL_BINDIR}" 
    RENAME HyINDEL_post
    )

install( PROGRAMS ${CMAKE_SOURCE_DIR}/scripts/Assembly.sh
    DESTINATION "${CMAKE_INSTALL_BINDIR}" 
    RENAME HyINDEL_assembly
    )
    